--- a/lib2024/final/css/style.css
+++ b/lib2024/final/css/style.css
@@ -28,6 +28,7 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
 body {
 	line-height: 1;
 }
@@ -66,20 +67,83 @@ Dark Grey - #454545;
 */
 /*MOBILE FIRST STYLING!*/
 /*================*/
+/*OVERLAY Styling*/
+.overlay-container {
+	display: none;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	background: rgba(93, 9, 68, 0.12);
+}
 
+.loader {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	width: 150px;
+	height: 150px;
+	margin: -75px 0 0 -75px;
+	border: 16px solid #5d0944;
+	border-radius: 50%;
+	border-top: 16px solid #ffffff;
+	animation: spin 2s linear infinite, change-color 4s ease-in-out infinite, border-radius-change 1s ease infinite;
+}
+
+@keyframes spin {
+	/*from sets the start of the property in an animation*/
+	from {
+		transform: rotate(0deg);
+	}
+	/*to sets the ending of the property in an animation*/
+	to {
+		transform: rotate(360deg);
+	}
+}
+
+@keyframes change-color {
+	/*0 % is begining*/
+	0% {
+		border-top-color: #ffffff;
+	}
+	/*50% is the middle*/
+	50% {
+		border-top-color: #f382d3;
+	}
+	/*100% is ending*/
+	100% {
+		border-top-color: #df16a6;
+	}
+}
+
+@keyframes border-radius-change {
+	0% {
+		border-radius: 50%;
+	}
+
+	50% {
+		border-radius: 0%;
+	}
+
+	100% {
+		border-radius: 50%;
+	}
+}
+/*===================*/
 /*FOR FLUID STYLING*/
 .col-main, .col-footer, img {
-	width:100%;
+	width: 100%;
 }
 /*TYPOGRAPHY*/
-h1{
+h1 {
 	font-family: 'Dela Gothic One', cursive;
 	color: #72a9ae;
 	font-size: 200%;
 	font-weight: 700;
 }
 
-h2{
+h2 {
 	line-height: 3;
 	font-weight: 700;
 	color: #72a9ae;
@@ -87,16 +151,16 @@ h2{
 
 @font-face {
 	font-family: "Eurocine";
-	src: url("/fonts/Eurocine-Regular.otf") format("otf")
+	src: url("/fonts/Eurocine-Regular.otf") format("otf");
 }
 
-body{ 
+body {
 	font-family: "Eurocine", sans-serif;
 	padding: 0;
-	margin:0;
+	margin: 0;
 	background-image: url(../img/triangle-mosaic.png);
 	font-size: 1rem;
- }
+}
 /*TYPOGRAPHY END*/
 /*============================*/
 
@@ -113,7 +177,7 @@ body{
 	display: none;
 }
 
-.main-nav{
+.main-nav {
 	background-color: #72a9ae;
 }
 
@@ -147,7 +211,7 @@ body{
 
 .ham {
 	height: 15px;
-	margin:15px;
+	margin: 15px;
 	padding-top: 5px;
 	position: relative;
 	float: right;
@@ -162,7 +226,7 @@ body{
 
 .ham:before {
 	content: "";
-	display:block;
+	display: block;
 	position: absolute;
 }
 
@@ -174,7 +238,7 @@ body{
 }
 
 .mobile-nav {
-	width:100%;
+	width: 100%;
 	clear: both;
 	position: absolute;
 	display: none;
@@ -183,12 +247,11 @@ body{
 .mobile-nav-container {
 	position: relative;
 	clear: both;
-	
 }
 
 .mobile-nav li {
 	box-sizing: border-box;
-	width:100%;
+	width: 100%;
 	padding: 10px;
 	background: #72a9ae;
 	border-bottom: 2px solid #121212;
@@ -210,12 +273,12 @@ img:hover{
 /*IMAGE STYLING END*/
 /*==================*/
 /*TABLE STYLING*/
-table{
+table {
 	margin: auto;
 	width: 100%;
 }
 
-th{
+th {
 	color: #72a9ae;
 	font-weight: 700;
 }
@@ -227,13 +290,13 @@ th{
 	text-align: center;
 }
 
-.schedule-container tr:nth-child(even){
+.schedule-container tr:nth-child(even) {
 	background-color: #efefef;
 }
 /*TABLE STYLING END*/
 /*=================*/
 /*PROFILE FORM STYLING*/
-.profile{
+.profile {
 	width: 100%;
 }
 
@@ -253,28 +316,29 @@ label {
 	box-sizing: border-box;
 }
 
-button{
+button {
 	padding: 5px;
 	background-color: white;
 	cursor: pointer;
 	float: right;
 	box-sizing: border-box;
 	margin-right: 35px;
- }
+}
 
- button:hover {
+button:hover {
 	background: #B2D4CD;
 }
 /*PROFILE FORM STYLING END*/
 /*========================*/
+/*LOADER CONTENTS*/
 /*PROFILE CARD STYLING BEGINS*/
 
-.profile-info{
+.profile-info {
 	box-sizing: border-box;
 	margin-bottom: -20px;
 }
 
-.results{
+#results {
 	background-color: white;
 	box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.5);
 	width: 100%;
@@ -286,64 +350,64 @@ button{
 	word-wrap: break-word;
 }
 /*THIS IS FOR THE PROFILE PICTURE*/
-.fa-user-alt{
+.fa-user-alt {
 	font-size: 600%;
 	transform: scale(1.15, 1.15);
 	border-radius: 50%;
-    border: 1px solid #72a9ae;
-    width: 100px;
-    height: 100px;
-    overflow: hidden;
-    line-height: 125px;
-    margin-bottom: 10px;
+	border: 1px solid #72a9ae;
+	width: 100px;
+	height: 100px;
+	overflow: hidden;
+	line-height: 125px;
+	margin-bottom: 10px;
 }
 
-.fa-envelope{
+.fa-envelope {
 	font-size: 200%;
 	color: #72a9ae;
 }
-.fa-envelope:hover{
+
+.fa-envelope:hover {
 	color: #2e6b70;
 	cursor: pointer;
 }
 /*END OF PROFILE CARD STYLING*/
 /*===========================*/
 /*BEGINNING OF FOOTER STYLING*/
-.footer{
+.footer {
 	background-color: #454545;
 	padding: 15px 0;
 	box-sizing: border-box;
 }
 
-.container{
+.container {
 	width: 50%;
-	margin:auto;
+	margin: auto;
 }
 
-.row{
+.row {
 	display: flex;
 	flex-wrap: wrap;
 }
 
-.footer-col{
+.footer-col {
 	width: 100%;
 	padding: 0 10px;
 	text-align: center;
-	
 }
 
-h4{
+h4 {
 	color: white;
 	font-weight: 700;
 	margin-bottom: 15px;
 	text-align: center;
 }
 
-.footer-col ul li, p:not(:last-child){
+.footer-col ul li, p:not(:last-child) {
 	margin-bottom: 10px;
 }
 
-.footer-col ul li a{
+.footer-col ul li a {
 	margin-top: 20px;
 	color: #bbbbbb;
 	text-decoration: none;
@@ -353,16 +417,16 @@ h4{
 	transition: all 0.3s ease;
 }
 
-.footer-col ul li a:hover{
+.footer-col ul li a:hover {
 	color: #ffffff;
 	padding-left: 8px;
 }
 
-.footer-col p{
+.footer-col p {
 	color: #bbbbbb;
 }
 
-.footer-col .social-links a{
+.footer-col .social-links a {
 	display: inline-block;
 	margin: 0px 30px 10px 0px;
 	float: right;
@@ -379,33 +443,35 @@ h4{
 	color: #ffffff;
 }
 
-.fa-facebook-f{
+.fa-facebook-f {
 	font-size: 150%;
 	background: #3b5999;
-  	height: 50px;
-  	width: 50px;
-  	line-height: 50px;
-  	border-radius: 50%;
-  	vertical-align: middle;
-  	color: #ffffff;
+	height: 50px;
+	width: 50px;
+	line-height: 50px;
+	border-radius: 50%;
+	vertical-align: middle;
+	color: #ffffff;
 }
 
 .fa-youtube {
 	font-size: 150%;
-  	height: 50px;
-  	width: 50px;
-  	line-height: 50px;
-  	border-radius: 50%;
-  	vertical-align: middle;
-  	background: #cd201f;
-  	color: #ffffff;
+	height: 50px;
+	width: 50px;
+	line-height: 50px;
+	border-radius: 50%;
+	vertical-align: middle;
+	background: #cd201f;
+	color: #ffffff;
 }
 /*END OF FOOTER STYLINGS*/
+
+
 /*======================*/
 /*DESKTOP STYLING BEGINS*/
-@media only screen and (min-width: 768px) {
-		header, main, footer{
 
+@media only screen and (min-width: 768px) {
+	header, main, footer {
 		max-width: 1024px;
 		margin: 0 auto;
 	}
@@ -426,7 +492,7 @@ h4{
 	.ham {
 		display: none;
 		height: 15px;
-		margin:15px;
+		margin: 15px;
 		padding-top: 5px;
 		position: relative;
 		float: right;
@@ -440,7 +506,7 @@ h4{
 
 	.ham:before {
 		content: "";
-		display:block;
+		display: block;
 		position: absolute;
 	}
 
@@ -451,67 +517,68 @@ h4{
 		bottom: 0;
 	}
 /*ARTICLE STYLINGS*/
-	.main-content{
+	.main-content {
 		float: left;
 		box-sizing: border-box;
-		width: 70%;
+		max-width: 70%;
+		padding-right: 20px;
 	}
 
-	.img{
+	.img {
 		float: right;
 		box-sizing: border-box;
-		width: 30%;
-		margin-top: 40px;
+		max-width: 30%;
+		margin-top: 50px;
 	}
 /*END OF ARTICLE STYLINGS*/
 /*PROFILE FORM STYLINGS*/
-	.profile{
+	.profile {
 		padding: 5px;
 	}
 
-	.form-value-transfer{
+	.form-value-transfer {
 		margin: 20px;
 		width: 45%;
 		float: left;
 	}
 
 	input[type=text], input[type=email], select, textarea {
-	    margin-left: 110px;
-	    width: 50%;
+		margin-left: 110px;
+		width: 50%;
 	}
 
-	button{
- 		padding: 5px;
-  		margin-right: 125px;
- 	}
+	button {
+		padding: 5px;
+		margin-right: 125px;
+	}
 /*END OF PROFILE FORMS STYLING*/
 /*PROFILE CARD STYLINGS*/
-	aside{
+	aside {
 		width: 50%;
 		float: right;
 	}
 
-	.profile-info{
+	.profile-info {
 		box-sizing: border-box;
 		margin-top: 30px;
 		margin-left: 100px;
-
 	}
 
-	.results{
+	#results {
 		max-width: 70%;
 		margin-right: 50px;
 	}
+	
 /*END OF PROFILE CARD STYLINGS*/
 
 /*FOOTER STYLINGS*/
-	.container{
+	.container {
 		width: 90%;
-		margin:auto;
+		margin: auto;
 		margin-top: 20px;
 	}
 
-	.footer-col{
+	.footer-col {
 		max-width: 31%;
 		padding: 0 10px;
 		margin-bottom: 10px;
